2010-01-08  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        run-javascriptcore-tests needs a --quiet flag
        https://bugs.webkit.org/show_bug.cgi?id=33399

        Until run-javascriptcore-tests has a --quiet flag, lets just stiffle the output in webkit-patch.

        * Scripts/webkitpy/steps/runtests.py:

2010-01-08  Andras Becsi  <abecsi@inf.u-szeged.hu>

        Reviewed by Alexey Proskuryakov.

        Only run http and websocket tests as last if no argument is given to be able to explicitly control the test order.

        To be able to run multiple instances of run-webkit-tests besides each other on the same machine we need to minimize
        the time when Apache and WebSocketServer is locked by tests.
        Because closeHTTPD() and closeWebSocketServer() is only called at the end of the testing,
        we need to run http and websocket tests after all other tests.
        If one however explicitly specifies the tests to run in the argument list of run-webkit-tests
        we need to preserve the given order.

        * Scripts/run-webkit-tests:

2010-01-08  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Don't post style-queue pass messages to bugs
        https://bugs.webkit.org/show_bug.cgi?id=33404

        These messages aren't needed any more now that we have the status
        bubble reporting pass events passively.

        * Scripts/webkitpy/commands/queues.py:

2010-01-08  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Optimize the number of CPUs used for building Qt and Gtk
        https://bugs.webkit.org/show_bug.cgi?id=33394

        Instead of hardcoding the number 8, we should read the number of CPUs
        from the environment.

        * Scripts/webkitpy/executive.py:
        * Scripts/webkitpy/webkitport.py:
        * Scripts/webkitpy/webkitport_unittest.py:

2010-01-08  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Eric Seidel.
