@@ -1,4 +1,4 @@
-#!/usr/bin/perl
+#!/usr/bin/perl -w
 #
 # Copyright (C) 2009, 2010 Chris Jerdonek (chris.jerdonek@gmail.com)
 # Copyright (C) 2010 Nokia Corporation and/or its subsidiary(-ies) 
@@ -31,14 +31,24 @@
 
 # Unit tests of VCSUtils::gitdiff2svndiff()
 
-use Test::Simple tests => 6;
+use strict;
+use warnings;
+
+use Test::Simple tests => 20;
 use VCSUtils;
 
-my $out;
-my $title;
-
-# New test
-$title = "gitdiff2svndiff: Convert standard git diff to svn diff";
+# We use this for display purposes, to keep each test title on one line.
+sub excerptString($)
+{
+    my ($text) = @_;
+    
+    my $length = 25;
+    
+    my $shortened = substr($text, 0, $length);
+    $shortened .= "..." if (length($text) > $length);
+    
+    return $shortened;
+}
 
 my $git_patch = <<END;
 diff --git a/WebCore/rendering/style/StyleFlexibleBoxData.h b/WebCore/rendering/style/StyleFlexibleBoxData.h
@@ -56,16 +66,31 @@ Index: WebCore/rendering/style/StyleFlexibleBoxData.h
 @@ -47,7 +47,6 @@ public:
 END
 
-$out = "";
+my @gitLines = split("\n", $git_patch);
+my @svnLines = split("\n", $svn_patch);
 
-foreach my $line (split('\n', $git_patch)) {
-    $out .= gitdiff2svndiff($line) . "\n";
+# New test: check each git header line with different line endings
+my $titleHeader = "gitdiff2svndiff: ";
+
+my @lineEndingPairs = ( # display name, value
+    ["", ""],
+    ["\\n", "\n"],
+    ["\\r\\n", "\r\n"],
+);
+
+for (my $i = 0; $i < @gitLines; $i++) {
+    foreach my $pair (@lineEndingPairs) { 
+        my $gitLine = $gitLines[$i] . $pair->[1];
+        my $expected = $svnLines[$i] . $pair->[1];
+        my $title = $titleHeader . excerptString($gitLine);
+        $title .= " [line-end: \"$pair->[0]\"]";
+        
+        ok($expected eq gitdiff2svndiff($gitLine), $title);
+    }
 }
 
-ok($svn_patch eq $out, $title);
-
 # New test
-$title = "gitdiff2svndiff: Convert mnemonic git diff to svn diff";
+my $title = "gitdiff2svndiff: Convert mnemonic git diff to svn diff";
 
 my @prefixes = (
     { 'a' => 'i', 'b' => 'w' }, # git-diff (compares the (i)ndex and the (w)ork tree)
@@ -74,6 +99,8 @@ my @prefixes = (
     { 'a' => 'o', 'b' => 'w' }, # git-diff HEAD:file1 file2 (compares an (o)bject and a (w)ork tree entity)
     { 'a' => '1', 'b' => '2' }, # git diff --no-index a b (compares two non-git things (1) and (2))
 );
+
+my $out = "";
 
 foreach my $prefix (@prefixes) {
     my $mnemonic_patch = $git_patch;
