@@ -1,3 +1,15 @@
+2010-01-09  Chris Jerdonek  <chris.jerdonek@gmail.com>
+
+        Reviewed by David Kilzer.
+
+        Modified VCSUtils::gitdiff2svndiff() to accept strings that
+        end in vertical white space.
+
+        https://bugs.webkit.org/show_bug.cgi?id=33415
+
+        * Scripts/VCSUtils.pm:
+        * Scripts/webkitperl/VCSUtils_unittest/gitdiff2svndiff.pl:
+
 2010-01-08  Eric Seidel  <eric@webkit.org>
 
         Reviewed by Adam Barth.
